@@ -404,7 +404,29 @@ public class ProxyService extends Service implements IProxyListenerALMTesting {
 			if (_msgAdapter != null) _msgAdapter.logMessage("Error adding AddCommands", Log.ERROR, e, true);
 			else Log.e(TAG, "Error adding AddCommands", e);
 		}
-	}
+    }
+
+    private void setAppIcon() {
+        try {
+            PutFile putFile = new PutFile();
+            putFile.setFileType(FileType.GRAPHIC_PNG);
+            putFile.setSyncFileName(ICON_SYNC_FILENAME);
+            putFile.setCorrelationID(nextCorrID());
+            putFile.setBulkData(contentsOfResource(R.raw.fiesta));
+            _msgAdapter.logMessage(putFile, true);
+            getProxyInstance().sendRPCRequest(putFile);
+
+            if (getAutoSetAppIconFlag()) {
+                SetAppIcon setAppIcon = new SetAppIcon();
+                setAppIcon.setSyncFileName(ICON_SYNC_FILENAME);
+                setAppIcon.setCorrelationID(nextCorrID());
+                _msgAdapter.logMessage(setAppIcon, true);
+                getProxyInstance().sendRPCRequest(setAppIcon);
+            }
+        } catch (SyncException e) {
+            Log.e(TAG, "Error setting app icon", e);
+        }
+    }
 
 	private void show(String mainField1, String mainField2) throws SyncException {
 		Show msg = new Show();
@@ -531,8 +553,16 @@ public class ProxyService extends Service implements IProxyListenerALMTesting {
 			default:
 				return;
 		}
-		
-		HMILevel curHMILevel = notification.getHmiLevel();
+
+        final HMILevel curHMILevel = notification.getHmiLevel();
+        final Boolean appInterfaceRegistered =
+                _syncProxy.getAppInterfaceRegistered();
+
+        if ((HMILevel.HMI_NONE == curHMILevel) && appInterfaceRegistered &&
+                firstHMIStatusChange) {
+            setAppIcon();
+        }
+
 		if (prevHMILevel != curHMILevel) {
 			boolean hmiChange = false;
 			boolean hmiFull = false;
@@ -553,8 +583,8 @@ public class ProxyService extends Service implements IProxyListenerALMTesting {
 					return;
 			}
 			prevHMILevel = curHMILevel;
-			
-			if (_syncProxy.getAppInterfaceRegistered()) {
+
+            if (appInterfaceRegistered) {
 				if (hmiFull) {
 					if (firstHMIStatusChange) {
 						showLockMain();
@@ -578,31 +608,14 @@ public class ProxyService extends Service implements IProxyListenerALMTesting {
 				if (hmiChange && firstHMIStatusChange) {
 					firstHMIStatusChange = false;
 
-                    InputStream is = null;
                     try {
-                        PutFile putFile = new PutFile();
-                        putFile.setFileType(FileType.GRAPHIC_PNG);
-                        putFile.setSyncFileName(ICON_SYNC_FILENAME);
-                        putFile.setCorrelationID(nextCorrID());
-                        putFile.setBulkData(contentsOfResource(R.raw.fiesta));
-                        _msgAdapter.logMessage(putFile, true);
-                        getProxyInstance().sendRPCRequest(putFile);
-
-                        if (getAutoSetAppIconFlag()) {
-                            SetAppIcon setAppIcon = new SetAppIcon();
-                            setAppIcon.setSyncFileName(ICON_SYNC_FILENAME);
-                            setAppIcon.setCorrelationID(nextCorrID());
-                            _msgAdapter.logMessage(setAppIcon, true);
-                            getProxyInstance().sendRPCRequest(setAppIcon);
-                        }
-
                         // upload turn icons
                         sendIconFromResource(R.drawable.turn_left);
                         sendIconFromResource(R.drawable.turn_right);
                         sendIconFromResource(R.drawable.turn_forward);
                         sendIconFromResource(R.drawable.action);
                     } catch (SyncException e) {
-                        Log.w(TAG, "Failed to set app icon", e);
+                        Log.w(TAG, "Failed to put images", e);
                     }
 				}
 			}
